0.7.5 Pairing bug seen during Melting Bowl